Progress Camera Point Cloud

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,10 @@ cmake_minimum_required(VERSION 3.2)
 # set project name, version and language mode for the compiler
 # CXX means C++
 project(CVTestProject VERSION 1.0 LANGUAGES CXX)
- 
+
+
+set("OpenCV_DIR" "C:/opencv/opencv/build/install")
+
 # Makes sure that projects and sub projects are put into
 # a nice tree structure inside visual studio
 if(MSVC)
@@ -17,3 +20,8 @@ find_package(OpenCV REQUIRED)
 add_executable(${CMAKE_PROJECT_NAME} "main.cpp")
 # link OpenCV
 target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC ${OpenCV_LIBS})
+
+add_executable(transformation_example 
+    main.cpp
+    transformation_helpers.cpp
+    transformation_helpers.h)
